# vibe-3

./: .gitignore  run_all.bat  run_backend.bat  run_cloudflared.bat  run_frontend.bat
.github/workflows/: deploy-frontend.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/routes/: calendar.py  chatbot.py  db.py  excel.py  health.py  news.py
backend/app/core/: config.py  database.py  scheduler.py
backend/app/repositories/: calendar_repository.py  chatbot_repository.py  news_repository.py
backend/app/schemas/: calendar.py  chatbot.py  news.py
backend/app/services/: calendar_service.py  chatbot_service.py  news_service.py
docs/: Architecture.md  Operation.md  PRD.md  codetest_report.html  codetest_report.md  index.html
frontend/: package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: calendarApi.ts  chatbotApi.ts  client.ts  config.ts  excelApi.ts  newsApi.ts
frontend/src/routes/: CalendarPage.tsx  ComplaintChatbotPage.tsx  DashboardPage.tsx  ExcelAutomationPage.tsx  NewsPage.tsx
frontend/src/types/: calendar.ts  chatbot.ts  excel.ts  news.ts  system.ts
skills/git-commit/: SKILL.md
