[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.3",
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "fastapi>=0.138.2",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "openai>=2.44.0",
    "pypdf>=6.14.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
